Update examples to version 1.5.3.1 Signed-off-by: Said Altury <said.altury@ibm.com>
Signed-off-by: Hayim Shaul <hayim.shaul@ibm.com>

--- a/python/notebooks/05_Deep_neural_networks.ipynb
+++ b/python/notebooks/05_Deep_neural_networks.ipynb
@@ -82,6 +82,7 @@
     "hyper_params.min_rand_value = -0.1\n",
     "hyper_params.max_rand_value = 0.1\n",
     "hyper_params.sparse_rate = 0.5\n",
+    "hyper_params.verbose = True\n",
     "\n",
     "nnp = pyhelayers.NeuralNetPlain()\n",
     "\n",
@@ -139,7 +140,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plain_samples = np.random.uniform(-0.5, 0.5, (batch_size, 224, 224, 3))\n",
+    "plain_input_shape = nnp.get_input_shapes_for_predict()[0]\n",
+    "plain_input_shape[0] = batch_size\n",
+    "\n",
+    "plain_samples = np.random.uniform(-0.5, 0.5, plain_input_shape)\n",
     "print(\"Generated random plain samples\")"
    ]
   },
