--- a/python/notebooks/20_XGBoost_prediction.ipynb
+++ b/python/notebooks/20_XGBoost_prediction.ipynb
@@ -185,7 +185,19 @@
             "metadata": {},
             "source": [
                 "### 2.2. Initialize a `PlainXGBoost` object\n",
-                "We intialize a `PlainXGBoost` object using the above trained XGBoost model. This object holds the XGBoost weights in the plain and will later be encrypted and used for prediction over encrypted data."
+                "We intialize a `PlainXGBoost` object using the above trained XGBoost model. This object holds the XGBoost weights in the plain and will later be encrypted and used for prediction over encrypted data.\n",
+                "The following hyperparameters are used:\n",
+                "* `feature_ranges`: Specifies the minimum and maximum possible values of each feature.\n",
+                "\n",
+                "* `store_thresholds`: If True, the XGBoost object stores all thresholds of all features of the model in the user side, in the plain. This has the advantage of making prediction faster and more accurate.\n",
+                "It has the downside of storing additional data on the client side, and doing some additional small pre-processing on the client-side.  \n",
+                "NOTE: if the thresholds data is considered sensitive data, do not set this flag to True.\n",
+                "\n",
+                "* `round_before_storing_thresholds`: In case `storeThresholds` is `True`, decides whether the thresholds should be scaled and rounded before they are stored. Turning this flag on makes close thresholds considered the same one, thus reducing runtime on the account of possibly reducing accuracy.\n",
+                "\n",
+                "* `number_of_cached_nodes`: Maximum allowed number of nodes that are shared among trees and their results are cached as an optimization. Increasing this parameter may reduce accuracy at the expense of higher memory consumption.\n",
+                "\n",
+                "* `grep, frep`: Control the accuracy of the comparison approximation in XGBoost prediction. Higher `grep` and `frep` values increase the accuracy at the expense of deeper and slower computation."
             ]
         },
         {
@@ -196,7 +208,10 @@
             "source": [
                 "hyper_params = pyhelayers.PlainModelHyperParams()\n",
                 "hyper_params.feature_ranges = feature_ranges\n",
-                "hyper_params.grep = 4\n",
+                "hyper_params.store_thresholds = True\n",
+                "hyper_params.round_before_storing_thresholds = True\n",
+                "hyper_params.number_of_cached_nodes = 100\n",
+                "hyper_params.grep = 2\n",
                 "hyper_params.frep = 1\n",
                 "plain_xgb = pyhelayers.PlainModel.create(hyper_params, [model_path])"
             ]
@@ -471,7 +486,7 @@
         "kernelspec": {
             "display_name": "fhe-py38-env",
             "language": "python",
-            "name": "fhe-py38-env"
+            "name": "python3"
         },
         "language_info": {
             "codemirror_mode": {
@@ -485,12 +500,7 @@
             "pygments_lexer": "ipython3",
             "version": "3.8.10"
         },
-        "orig_nbformat": 4,
-        "vscode": {
-            "interpreter": {
-                "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-            }
-        }
+        "orig_nbformat": 4
     },
     "nbformat": 4,
     "nbformat_minor": 2
